py_pubsub/log/build_2025-04-21_13-07-03/py_pubsub/stdout_stderr.log
running egg_info
writing build/py_pubsub/py_pubsub.egg-info/PKG-INFO
writing dependency_links to build/py_pubsub/py_pubsub.egg-info/dependency_links.txt
writing entry points to build/py_pubsub/py_pubsub.egg-info/entry_points.txt
writing requirements to build/py_pubsub/py_pubsub.egg-info/requires.txt
writing top-level names to build/py_pubsub/py_pubsub.egg-info/top_level.txt
reading manifest file 'build/py_pubsub/py_pubsub.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file 'build/py_pubsub/py_pubsub.egg-info/SOURCES.txt'
running build
running build_py
copying py_pubsub/publisher_member_function.py -> /home/barenbo/Desktop/Code/robot/lab2/py_pubsub/build/py_pubsub/build/lib/py_pubsub
running install
running install_lib
copying /home/barenbo/Desktop/Code/robot/lab2/py_pubsub/build/py_pubsub/build/lib/py_pubsub/publisher_member_function.py -> /home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub
byte-compiling /home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher_member_function.py to publisher_member_function.cpython-312.pyc
  File "/home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher_member_function.py", line 51
    self.publisher_.publish(Twist(linear=Vector3(x=0.0, y=0.0, z=-0.5), linear=Vector3(x=0.0, y=0.0, z=1.0)))
                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: linear

running install_data
running install_egg_info
removing '/home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub-0.0.0-py3.12.egg-info' (and everything under it)
Copying build/py_pubsub/py_pubsub.egg-info to /home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub-0.0.0-py3.12.egg-info
running install_scripts
Installing talker script to /home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/py_pubsub
writing list of installed files to '/home/barenbo/Desktop/Code/robot/lab2/py_pubsub/build/py_pubsub/install.log'
